Fixed a minor Firefox layout issue

--- a/ui_design/stylus/screen.styl
+++ b/ui_design/stylus/screen.styl
@@ -148,32 +148,34 @@ p
         width 100%
         margin-top 5px
 
-#page-content
-  width 960px
-  margin 0 auto
-
 #sidebar
   width 240px
   height 100px
   position absolute
   right 0
-  top 20px
+  top 14px
 
 #footer
   width 100%
   height 40px
   background #dadada
-  line-height 38px
   text-align center
   text-shadow 0 1px 0 #FFF
   position absolute
-  bottom 0
+  bottom -4px
+  p
+    line-height 38px
+
+.clear
+  clear both
 
 
 /* CONTENT STYLES */
 
 #page-content
-  padding 0 0 30px 0
+  width 960px
+  margin 0 auto
+  padding-bottom 70px
   position relative
 
   .breadcrumb
@@ -194,9 +196,12 @@ p
   .tabs-container
     width 700px
     margin-bottom 40px
+    position relative
     .tabs
       width 140px
-      display inline-block
+      vertical-align top
+      clear left
+      float left
       ul.tabs-list
         li
           width 139px
@@ -226,8 +231,8 @@ p
       width 530px
       padding 12px 14px 0 14px
       border 1px solid #cacaca
-      display inline-block
       vertical-align top
+      float right
       text-shadow 0 1px 0 #FFF
       gradient(color-2-light, color-2-dark)
       .article
@@ -341,8 +346,8 @@ p
         text-shadow 0 1px 0 #FFF
         .avatar
           display inline-block
-          width 80px
-          height 80px
+          width 50px
+          height 50px
           background #CCC
           margin-right 8px
         p
@@ -350,6 +355,7 @@ p
           display inline-block
           vertical-align top
           line-height 17px
+          margin-top 0
         a.edit-btn
           display inline-block
           width 85px
@@ -360,7 +366,6 @@ p
           text-align center
           color #FFF
           float right
-          margin-top -24px
         a.edit-btn:hover
           background url('../img/edit-btn.png') no-repeat left bottom
 
